[package]
name = "piet-gpu"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "A compute-centric GPU 2D renderer."
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "winit"
path = "bin/winit.rs"

[dependencies.piet-gpu-types]
path = "../piet-gpu-types"

[dependencies]
bytemuck = "1.4"
wgpu = "0.6"
piet = "0.0.13"
png = "0.16.2"
rand = "0.7.3"
roxmltree = "0.11"
winit = "0.22"
clap = "2.33"
futures = "0.3"
memoffset = "0.5"
image = "0.23"
